Se creo carpeta de Funciones

--- a/03 HTML Avanzado/index.html
+++ b/03 HTML Avanzado/index.html
@@ -13,7 +13,7 @@
     Una tabla es un conjunto de filas y columnas que contiene información necesaria. Nos sirve para organizar y tener una mejor visivilidad de los elementos.
 
     ** Celda. Una celda es la interseccion entre una fila y columna que contiene informacion necesaria.
-    En HTML definimos las celdas utilizando la etiqueta <tb></tb>
+    En HTML definimos las celdas utilizando la etiqueta <td></td>
     
     ** Filas. Las filas se definen mediante la etiqueeta <tr></tr>
 
